spade-tests/src/snapshots/spade_tests__suggestions__suggest_add_array_size.snap
---
source: spade-tests/src/suggestions.rs
---
entity main() {
    let _: [bool] = [true, false];
}


error: missing array size
  ┌─ testinput:2:12
  │
2 │     let _: [bool] = [true, false];
  │            ^^^^^^ missing size for this array type
  │
  = note: array types need a specified size
  = insert a size here
  │
2 │     let _: [bool; /* N */] = [true, false];
  │                 +++++++++


